Test: 테스트 코드 작성 및 리팩토링